# watercontroller

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml  build.rs
crates/core/src/: api.rs  app.rs  calibration.rs  config.rs  ha_discovery.rs  lib.rs  log_buffer.rs  mqtt_dispatch.rs  schedule.rs  state.rs  switch.rs  traits.rs  water_valve.rs  webhook.rs
crates/firmware/: Cargo.toml  partitions.csv  sdkconfig.defaults
crates/firmware-nostd/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
crates/firmware-nostd/.cargo/: config.toml
crates/firmware-nostd/certs/: cert.der  key.der
crates/firmware-nostd/src/: ap.rs  logbuf.rs  main.rs  mdns.rs  mqtt.rs  nvs.rs  ota.rs  schedule.rs  sensors.rs  serial.rs  sntp.rs  telnet.rs  webapi.rs  webhook.rs  wifiscan.rs
crates/firmware/.cargo/: config.toml
crates/firmware/assets/: index.html
crates/firmware/src/: assets.rs  captive_dns.rs  diag.rs  http_server.rs  hw_adc.rs  hw_clock.rs  hw_gpio.rs  hw_nvs.rs  hw_pcnt.rs  log_telnet.rs  main.rs  mdns_init.rs  mqtt_client.rs  net_ota.rs  net_wg.rs  net_wifi.rs  qemu_eth.rs  serial_cli.rs  task_util.rs  tee_log.rs  tls_certgen.rs  webhook_dispatch.rs
crates/host/: Cargo.toml
crates/host/src/: fakes.rs  http.rs  main.rs  webhook_dispatch.rs
ref/: watercontroller_esphome.yaml
scripts/: device-test.sh  firmware.sh  ota-flash.sh  qemu.sh
tests/playwright/: README.md  conftest.py  requirements.txt  test_alarm.py  test_backup.py  test_dashboard.py  test_serial_cli.py  test_settings.py  test_soak.py  test_webhooks.py  test_wifi.py
