[workspace]
resolver = "2"
members = ["crates/core", "crates/host", "crates/firmware"]
# firmware needs the `esp` toolchain + xtensa target, so it's excluded from
# the default set. Build it explicitly with:
#   cd crates/firmware && cargo build
default-members = ["crates/core", "crates/host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mangelajo/watercontroller"

[workspace.dependencies]
watercontroller-core = { path = "crates/core" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
