[workspace]
resolver = "2"
members = ["crates/core", "crates/host", "crates/firmware"]
# Both firmware crates need the `esp` toolchain + xtensa target, so
# they're excluded from the default workspace set. Build them explicitly:
#   cd crates/firmware       && cargo build    # esp-idf-svc (production)
#   cd crates/firmware-nostd && cargo build    # no_std spike (WIP)
# `firmware-nostd` is deliberately NOT a workspace member yet — its
# rust-toolchain.toml + .cargo/config.toml are incompatible with the
# host build (build-std forces a different sysroot path). It builds
# standalone from its own directory.
exclude = ["crates/firmware-nostd"]
default-members = ["crates/core", "crates/host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mangelajo/watercontroller"

[workspace.dependencies]
watercontroller-core = { path = "crates/core" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
# Keep function symbols in the firmware ELF so panic backtraces can
# be decoded with `xtensa-esp32-elf-addr2line`. Debug info (DWARF) is
# still dropped to keep the image size down. The kept .symtab section
# costs ~80 KiB; without it a `Guru Meditation Error … Backtrace:
# 0x4014c90a:…` is opaque.
strip = "debuginfo"
