[package]
name = "watercontroller-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-independent logic for the doremorwater controller"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `chrono` with std + alloc + serde (no `clock` feature — time always comes
# through the Clock trait, never directly from the OS).
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "serde"] }
# Timezone-aware schedule evaluation. `filter-by-regex` keeps only Europe/*
# zones at compile time so the bundled tzdata stays small (we only need
# Europe/Madrid for now; users can add more).
chrono-tz = { version = "0.10", default-features = false, features = ["filter-by-regex"] }
# Bounded queues / ring buffers without alloc explosion.
heapless = "0.8"

[dev-dependencies]
serde_json = { workspace = true }

# chrono-tz timezone filter is applied via the `CHRONO_TZ_TIMEZONE_FILTER`
# env var (set in crates/firmware/.cargo/config.toml). The bundled tzdata
# would otherwise blow past the OTA partition size.
