[package]
name = "watercontroller-firmware-nostd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure-Rust no_std firmware for the doremorwater controller"

# Standalone workspace — explicit `members = ["."]` keeps cargo from
# walking up and finding the parent workspace (which would override
# our .cargo/config.toml's xtensa target).
[workspace]
members = ["."]

# Modelled on esp-hal's own examples/wifi/embassy_dhcp/Cargo.toml at
# rev a4833ad (esp-hal v1.1.1). All esp-* crates come from the same
# monorepo revision so cargo treats them as one workspace — required
# because they share private (`__`-prefix) features that crates.io
# publication blocks across packages.
[dependencies]
esp-hal              = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32", "unstable", "log-04"] }
esp-rtos             = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32", "esp-radio", "embassy", "log-04"] }
esp-radio            = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32", "wifi", "log-04"] }
esp-alloc            = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32"] }
esp-backtrace        = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32", "println", "panic-handler", "custom-halt"] }
esp-println          = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32", "log-04"] }
esp-storage          = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442", features = ["esp32"] }
sequential-storage   = "7"

# Embassy async stack. Versions match what esp-rtos / esp-radio require.
embassy-executor     = "0.10"
embassy-time         = "0.5"
embassy-net          = { version = "0.9", features = [
    "tcp", "udp", "dns", "dhcpv4",
    "medium-ethernet", "proto-ipv4", "multicast",
] }
embassy-sync         = "0.8"
embassy-futures      = "0.1"
# no_std MQTT 5 client. 0.3.x is the simple `MqttClient` API (the one
# every esp-rs example uses); 0.5 reworked it into a heavier
# Transport/BufferProvider model we don't need. 0.3 wants
# embedded-io-async 0.6 while embassy-net is on 0.7 — bridged by a
# thin shim in mqtt.rs (the async Read/Write fn signatures are
# identical between the two; only the error type differs).
rust-mqtt            = { version = "0.3", default-features = false }
embedded-io-async-06 = { package = "embedded-io-async", version = "0.6" }
embedded-io-async    = "0.7"

picoserve            = { version = "0.18", features = ["embassy", "json", "log", "alloc", "ws"] }
serde                = { version = "1", default-features = false, features = ["derive"] }
# alloc-backed JSON serialization for the API responses (Config is too
# big/nested for serde-json-core's fixed-buffer serializer).
serde_json           = { version = "1", default-features = false, features = ["alloc"] }
# `Clock::now()` returns chrono::DateTime<Utc>; no `clock` feature —
# time comes from embassy, not the OS.
chrono               = { version = "0.4", default-features = false, features = ["alloc"] }

# Domain logic — same crate the IDF firmware + host SPA use. With
# default-features = false the crate uses spin::Mutex + alloc only;
# no std required.
watercontroller-core = { path = "../core", default-features = false }

# Outbound TLS (mbedtls-rs) — OPTIONAL, behind the `tls` feature, off
# by default. We dropped the *inbound* HTTPS server: a mbedtls server
# session's ~16 KiB×2 SSL buffers don't fit in this ESP32-PICO-D4's
# internal DRAM and esp-hal has no PSRAM driver for the D4 variant
# (see N6 notes / README). But a *client* TLS session — one transient
# outbound connection at a time, e.g. a webhook POST to Slack/HA over
# HTTPS — is concurrency-controllable and worth keeping. Enable with
# `--features tls` when the webhook dispatcher is ported. Building it
# pulls in the mbedtls C sources (cmake + xtensa-esp32-elf-gcc).
mbedtls-rs           = { git = "https://github.com/esp-rs/esp-mbedtls", rev = "177721027aae6e014e1cf922608eb9955d70d85b", default-features = false, features = ["esp32", "embassy-time", "log"], optional = true }

# Cross-platform building blocks.
log                  = "0.4"
heapless             = "0.8"
critical-section     = "1"
# `Adc::read_oneshot` is an `nb` (non-blocking) API; we spin on it.
nb                   = "1"
# 64-bit atomic for the SNTP epoch offset — the ESP32 (Xtensa LX6) has
# no native 64-bit atomics; the `critical-section` feature emulates it.
portable-atomic      = { version = "1", features = ["critical-section"] }
static_cell          = "2"
spin                 = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }
embedded-storage     = "0.3"
# `alloc`: `TlsConfig::new()` only advertises RSA `signature_algorithms`
# when embedded-tls's `alloc` feature is on. Without it the ClientHello
# offers ECDSA/Ed25519 only and any host with an RSA cert (e.g. a Let's
# Encrypt `R`-series chain) aborts the handshake. `alloc` is a bare marker
# feature — no extra deps. The heavier `rsa` feature (which also *verifies*
# an RSA CertificateVerify) is not used: it pulls a second `der` version
# that conflicts with the RustCrypto stack, and `UnsecureProvider` skips
# verification anyway (a verifying provider is still a TODO — see webhook.rs).
embedded-tls = { version = "0.18", default-features = false, features = ["log", "alloc"], optional = true }
# rand_core 0.6 — the version embedded-tls 0.18 wants; we impl its
# RngCore/CryptoRng over the ESP32 hardware RNG for the TLS handshake.
rand_core = { version = "0.6", default-features = false, optional = true }

[features]
default = []
# Outbound (client) TLS for webhook delivery. Off by default. Uses the
# pure-Rust `embedded-tls` (TLS 1.3) — caller-sized record buffers, no C
# compile. (`mbedtls-rs` was evaluated and dropped: its 16 KiB×2 fixed
# SSL buffers don't fit this device's heap.)
tls = ["dep:embedded-tls", "dep:rand_core"]

# mbedtls-rs-sys depends on `esp-hal = "1"` from crates.io, but we use a
# git pin (matching set of esp-radio/esp-rtos/etc). Without this patch,
# Cargo links two copies of `esp-riscv-rt` and refuses to build.
[patch.crates-io]
esp-hal                = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-radio              = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-rtos               = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-backtrace          = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-storage            = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-riscv-rt           = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal", rev = "a4833adfc15b6a0bd5b08c525dd244066b57a442" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"
