[package]
name = "watercontroller-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native binary running watercontroller-core with fake peripherals"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
watercontroller-core = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"

# HTTP server (used in the milestone-4 SPA shell development workflow).
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Blocking HTTP client used by the host webhook dispatcher. ureq is
# tiny vs reqwest and we only need synchronous POST/PUT from a single
# worker thread — same pattern as the firmware-side dispatcher.
ureq = { version = "2", default-features = false }
